# fstdout-logger

./: Cargo.toml  README.md
examples/: basic_usage.rs  color_options.rs  production.rs  stdout_only.rs
src/: lib.rs
src/config/: mod.rs
src/examples/: mod.rs
src/formatter/: mod.rs
